DONE: added a paper

--- a/_posts/2020-12-07-RC-Week-4.md
+++ b/_posts/2020-12-07-RC-Week-4.md
@@ -107,7 +107,7 @@ Read all these papers where completion criteria is adding couple of sentences ab
 <br>
 *They achieve SoTA on WikiText103, enwiki8 and text8. They also achieve SoTA on One Billion Words, which does not have long range dependencies, and (among models without 2-step fine-tuning) Penn TreeBank, which is a smaller dataset, which suggests that the model generalises well to datasets different from those for which it was designed.*
 
-- [ ] Aidan N. Gomez, et al. “The Reversible Residual Network: Backpropagation Without Storing Activations” NIPS 2017. (1/5)
+- [x] Aidan N. Gomez, et al. “The Reversible Residual Network: Backpropagation Without Storing Activations” NIPS 2017. (1/5)
 - [x] **Mostafa Dehghani, et al. “Universal Transformers” ICLR 2019.** *The model in this paper is inspired by the Adaptive Computation Time RNN](https://arxiv.org/abs/1603.08983) but applies this approach to a Transformer. Similar to the regular Transformer model they use an encoder-decoder architecture where the encoder block comprises a self-attention block and a transition block (plus LayerNorm and Dropout) and the decoder block comprises self-attention, memory attention and a transition block. The key difference is that they have just a single encoder and decoder block. Encoding consists of applying the same encoder block, initially to the input and then to the output from the previous application for a number of timesteps. The output of this is passed to the decoder which is then repeatedly run for a number of timesteps. The number of timesteps can be determined beforehand or decided dynamically on a per-symbol basis similar to ACT-RNN using a halting mechanism as in ACT-RNN to decide whether to stop computing for a particular symbol. The difference is that since the whole sequence needs to be present each time to use in self-attention, the output for the symbols which have been halted is simplied copied over to the next stage. This model is particularly good at algorithmic tasks at which the regular transform struggles. They show that unlike the regular Transformer it is Turing-complete. It also outperforms regular transformers on language tasks and manages to get SoTA on the LAMBDADA language modelling task.*
 
 
