--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -351,3 +351,10 @@ The model outperforms supervised backbones in the majority of cases (often with 
 ## 26. The Reversible Residual Network:Backpropagation Without Storing Activations ([link](https://arxiv.org/pdf/1707.04585.pdf))
 In this paper they design a residual block for which given the outputs and the weights, the inputs can be reconstructed. This means only one set of activations need to be stored since the rest can be calculated when required during the backward pass. The space saving does not mean though that more work is needed during the backward pass but this scales linearly with the number of layers. The key advantage is that bigger batch sizes will fit into memory. They are able to fit a batch size of 256 for a RevNet of similar size to ResNet101 but for the later this batch size does not fit into the same size memory. Although the residual block has been changed to be reversible on CIFAR-10, CIFAR-100 and ImageNet it achieves error rates close to and sometimes better than ResNet models of various sizes.
 
+## 27. MADE: Masked Autoencoder for Distribution Estimation ([link](https://arxiv.org/abs/1502.03509v2))
+See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
+
+## 28. Scaling Autoregressive Video Models ([link](https://arxiv.org/abs/1906.02634)
+See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
+
+## 30. 
