--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -357,4 +357,9 @@ See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
 ## 28. Scaling Autoregressive Video Models ([link](https://arxiv.org/abs/1906.02634)
 See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
 
-## 30. 
+## 30. Multi-Task Learning Using Uncertainty to Weigh Losses for Scene Geometry and Semantics ([link](https://arxiv.org/abs/1705.07115))
+See [here]
+
+## 31. Universal Language Model Fine-tuning for Text Classification ([link](https://arxiv.org/abs/1906.02634))
+See [here]
+
