--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -358,8 +358,17 @@ See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
 See [here]({{site.baseurl}}{% post_url cs294/_posts/2020-11-23-CS294-Week1 %})
 
 ## 30. Multi-Task Learning Using Uncertainty to Weigh Losses for Scene Geometry and Semantics ([link](https://arxiv.org/abs/1705.07115))
-See [here]
+See [here]({{site.baseurl}}{% post_url cs330/_posts/2020-11-30-CS330-Week1 %})
 
 ## 31. Universal Language Model Fine-tuning for Text Classification ([link](https://arxiv.org/abs/1906.02634))
-See [here]
+See [here]({{site.baseurl}}{% post_url cs330/_posts/2020-11-30-CS330-Week1 %})
+
+## 32. NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis ([link](https://arxiv.org/abs/2003.08934))
+See [here]({{site.baseurl}}{% post_url 2020-12-26-NeRF %})
+
+## 33.
+
+## 34.
+
+
 
