--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -366,9 +366,12 @@ See [here]({{site.baseurl}}{% post_url cs330/_posts/2020-11-30-CS330-Week1 %})
 ## 32. NeRF: Representing Scenes as Neural Radiance Fields for View Synthesis ([link](https://arxiv.org/abs/2003.08934))
 See [here]({{site.baseurl}}{% post_url 2020-12-26-NeRF %})
 
-## 33.
+## 33. Character-level language modeling with deeper self-attention ([link](https://arxiv.org/abs/1808.04444))
+See [here]({{site.baseurl}}{% post_url 2020-12-07-RC-Week-4 %})
 
-## 34.
+## 34. Transformer-XL: Attentive Language Models Beyond a Fixed-Length Context ([link](https://arxiv.org/abs/1901.02860))
+See [here]({{site.baseurl}}{% post_url 2020-12-07-RC-Week-4 %})
 
-
+## 35. Stabilizing Transformers for Reinforcement Learning ([link](https://arxiv.org/abs/1910.06764))
+See [here]({{site.baseurl}}{% post_url 2020-12-07-RC-Week-4 %})
 
