--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -164,7 +164,7 @@ Features in each layer of the graph network are updated using GraphConv as follo
 - Generate features for each of its neighbours via $\rho_2$
 - Sum all of these to get the output feature:
 
-    $$h_l^i = \rho_i\left(h_{l-1}^i\right) + \sum_{j \ in \mathcal{N}(i)}\rho_2\left(\h_{l-1}^j)$$
+    $$h_l^i = \rho_i\left(h_{l-1}^i\right) + \sum_{j \in \mathcal{N}(i)}\rho_2\left(h_{l-1}^j\right)$$
 
 Although nodes in framee $t$ are not directly connected to each other if the graph network has more that one layer information can propagate between detections in the same frame through tracklets.
 
