DONE: Discrete PS5

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -375,3 +375,16 @@ See [here]({{site.baseurl}}{% post_url 2020-12-07-RC-Week-4 %})
 ## 35. Stabilizing Transformers for Reinforcement Learning ([link](https://arxiv.org/abs/1910.06764))
 See [here]({{site.baseurl}}{% post_url 2020-12-07-RC-Week-4 %})
 
+## 36. PointRend: Image Segmentation as Rendering ([link](https://arxiv.org/abs/1912.08193v2))
+A problem with segmentation models is that if you want higher quality segmentations you typically needed to use higher resolution outputs resulting in a slower and larger model. But what if you did not have to actually predict a value at every point? There are often some problem areas like boundaries and fine details that don't come out very well even though the segmentation is good as a whole. In this paper they propose an approach that is inspired by rendering where they from a coarse grid and subdivide it until the desired resolution is reached, refining the prediction each time but only at the most uncertain points. The rest are just interpolated from the previous grid. Here uncertainty is determined by distance of the ground truth class prediction from 0.5 at each point. They improve AP on COCO and Cityscapes for instance segmentation and mIOU on Cityscapes for semantic segmentation. Although a higher resolution can be achieved much more cheaply with their approach compared to baselines, even at the same resolution of the baseline the results are better for the instance segmentation tasks. They also look better with cleaner boundaries and the delineation of small details.  Higher resolution in instance segmentations helps larger objects look better whilst prioritising uncertain points helps to recover small objects and details in semantic segmentation which might get as much focus otherwise since the model just has one feature map in which to put all the segmentations.
+
+## 37. Aggregated Residual Transformations for Deep Neural Networks aka ResNext ([link](https://arxiv.org/abs/1611.05431v2))
+
+In addition to depth (number of layers) and width (channels in residual bottleneck block) they introduce a new hyperparamter in the model design "cardinality". This is motivated by the fact that a simple dot product can be seen as "split-transform-combine". Whilst width increases the number of simple transforms (just $w_i * x_i$) cardinality determines number of complex transforms. The dot product is replaced with the sum of $C$ transforms $\mathcal{T}_i$ where the input to each transform is typically of lower dimensions than the block input. They adopt a simple $\mathcal{T}_i$ which has the form of a bottleneck block and group convolutions can be used to implement the resulting ResNeXt blocks.
+
+
+For a given scale with regard to parameters, increasingly cardinality improves ImageNet results a lot more than increasing width or depth. Interestingly residual connections matter more for lower cardinality suggesting that higher cardinality leads to better representations. These models also benefit from skip connections but they don't need them so much.
+
+It does better than ResNets and Inception models of the same size on ImageNet. It is much simpler compared to Inception. Models trained on ImageNet5k have a much better relative 1k performance compared to equivalent ResNet. 
+
+For CIFAR-10 as well increasing cardinality with fixed width improves results lot more than increasing width with cardinality of 1. CIFAR-10 and 100 results were better than Wide ResNet which was the best published at that time. Finetuning ResNext50 and 101 on COCO also improves object detection performance relative to the equivalent ResNets.  
