DONE: added 3 papers

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -382,9 +382,40 @@ A problem with segmentation models is that if you want higher quality segmentati
 
 In addition to depth (number of layers) and width (channels in residual bottleneck block) they introduce a new hyperparamter in the model design "cardinality". This is motivated by the fact that a simple dot product can be seen as "split-transform-combine". Whilst width increases the number of simple transforms (just $w_i * x_i$) cardinality determines number of complex transforms. The dot product is replaced with the sum of $C$ transforms $\mathcal{T}_i$ where the input to each transform is typically of lower dimensions than the block input. They adopt a simple $\mathcal{T}_i$ which has the form of a bottleneck block and group convolutions can be used to implement the resulting ResNeXt blocks.
 
-
 For a given scale with regard to parameters, increasingly cardinality improves ImageNet results a lot more than increasing width or depth. Interestingly residual connections matter more for lower cardinality suggesting that higher cardinality leads to better representations. These models also benefit from skip connections but they don't need them so much.
 
 It does better than ResNets and Inception models of the same size on ImageNet. It is much simpler compared to Inception. Models trained on ImageNet5k have a much better relative 1k performance compared to equivalent ResNet. 
 
 For CIFAR-10 as well increasing cardinality with fixed width improves results lot more than increasing width with cardinality of 1. CIFAR-10 and 100 results were better than Wide ResNet which was the best published at that time. Finetuning ResNext50 and 101 on COCO also improves object detection performance relative to the equivalent ResNets.  
+
+## 38. Ab initio solution of the many-electron Schrödinger equation with deep neural networks ([link](https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.2.033429))
+
+In this paper they use a neural network to learn the wavefunction for atoms and molecules. They do so by modelling the wavefunction as follows
+
+$$\sum_{a} w_a det\left[\boldsymbol{phi}\left(\mathbf{r}^a\right)\right]$$
+
+where the determinant is actually a sum of tensor products of one-electron orbitals $\phi_i^a(\mathbf{x}_i)$.
+
+It is necessary for the wave function to be anti-symmetric to the interchange pairs.
+
+The goal is then to learn $\phi\left(\mathbf{r}_a\right)$ which is done using as features the following:
+
+- Per electron features - position $\mathbf{r}_a$ and distance to nucleus $\left\lvert\mathbf{R} - \mathbf{r}_a\right\rvert$
+- Pairwise features - displacement and distance between pairs of electrons $\mathbf{r}_a - \mathbf{r}_b$, $\left\lvert\mathbf{r}_a - \mathbf{r}_b\right\rvert$
+
+Then there is a sequence of blocks which works as follows
+
+- Per electron features with the same spins are aggregated
+- For each electron you aggregate the pairwise features after grouping by spin
+- Then you have a layers that take as input these aggregated features as well as the individual features for that particular electron and output new features for each electron and the pairs. 
+
+After this you use the features from the final layer to generate the final function $\phi\left(\mathbf{r}_a\right)$.
+
+It turns out that you can order the features by spin and let the function be 0 for pairs with opposing spins and thereby make the final matrix a block diagonal with two blocks whose determinant is the product of the determinant of blocks. 
+
+They say that the resulting wavefunction is only antisymmetric if you exchange electrons with the same spin but that this nonetheless yields the right expectation values (which is what is needed for the loss) and that you can reconstruct the fully antisymmetric wave function if required.
+
+The loss function is the expectation of the Hamiltonian using the solution found by FermiNet which is minimised. 
+
+Using the FermiNet Ansatz they are able to outperform or get competitive results for various tasks. For example they get the best ground state energies relative to earlier models for the atoms of most of the elements they consider and also make high quality predictions for the ground state energies for more complex systems like molecules. 
+
