small change to papers

--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -396,11 +396,11 @@ $$\sum_{a} w_a det\left[\boldsymbol{phi}\left(\mathbf{r}^a\right)\right]$$
 
 where the determinant is actually a sum of tensor products of one-electron orbitals $\phi_i^a(\mathbf{x}_i)$.
 
-It is necessary for the wave function to be anti-symmetric to the interchange pairs.
+It is necessary for the wave function to be anti-symmetric with respect to interchanging pairs.
 
 The goal is then to learn $\phi\left(\mathbf{r}_a\right)$ which is done using as features the following:
 
-- Per electron features - position $\mathbf{r}_a$ and distance to nucleus $\left\lvert\mathbf{R} - \mathbf{r}_a\right\rvert$
+- Per electron features - displacement and distance to nucleus $\mathbf{R} - \mathbf{r}_a$, $\left\lvert\mathbf{R} - \mathbf{r}_a\right\rvert$
 - Pairwise features - displacement and distance between pairs of electrons $\mathbf{r}_a - \mathbf{r}_b$, $\left\lvert\mathbf{r}_a - \mathbf{r}_b\right\rvert$
 
 Then there is a sequence of blocks which works as follows
