--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -419,3 +419,54 @@ The loss function is the expectation of the Hamiltonian using the solution found
 
 Using the FermiNet Ansatz they are able to outperform or get competitive results for various tasks. For example they get the best ground state energies relative to earlier models for the atoms of most of the elements they consider and also make high quality predictions for the ground state energies for more complex systems like molecules. 
 
+## 39. GLIDE: Towards Photorealistic Image Generation and Editing with Text-Guided Diffusion Models ([link](https://arxiv.org/abs/2112.10741))
+
+See [here](https://minibatchai.com/diffusion/generative-models/text2image/2022/05/02/GLIDE.html)
+
+## 40. Denoising Diffusion Probabilistic Models ([link](https://arxiv.org/abs/2006.11239))
+
+See [here](https://minibatchai.com/diffusion/generative-models/text2image/2022/06/17/Diffusion.html)
+
+## 41. Improved Denoising Diffusion Probabilistic Models ([link](https://arxiv.org/abs/2102.09672))
+
+See [here](https://minibatchai.com/diffusion/generative-models/text2image/sampling/2022/07/14/Diffusion_Sampling.html)
+
+Additional notes about improving log likelihood
+
+### Learning the variance
+In the DDPM paper the covariance of the reverse process, $\Sigma_{\theta}\left(\xt, t\right)$ is modelled as a diagonal covariance $\sigma_t\II$ and it set as a hyperparameter.
+
+Here they try two choices for $\sigma_t$, $\bt$ and $\tbt$. For large values of $t$ these two are roughly equal and for larger $T$ they converge sooner so it might seem that the choice of $\sigma_t$ is not that important.
+
+However it turns out that the first few time steps contribute the most to the variational lower bound so it might be a good idea to learn a better value for the variance.
+
+The method proposed in Improved Diffusion is to parameterise the variance as an interpolation between $\bt$ and $\tbt$ with learned parameter $v$
+
+$$\Sigma_{\theta}\left(\xt, t\right) = \exp\left(v\log\bt + (1 - v)\log \tbt\right)$$
+
+The simplified loss from DDPM does not involve the variance so a new hybrid loss is defined as 
+
+$$L_\text{hybrid} = L_\text{simple} + \lambda L_\text{vlb}$$
+
+where $L_\text{vlb}$ is the variational lower bound and $\lambda$ is a loss weight set as a hyperparameter. 
+
+### Cosine noise schedule
+- DDPM increases noise linearly for the forward process
+- The effect is that during the early part of the sequence the sample is virtually all noise
+- Indeed using an initial noise sample as $x_t$ for some $t > 0$ yields comparable results to sampling for the full $T$ timesteps
+- The original approach used a linear schedule for $\beta_t$
+- Instead they use a cosine based schedule for $\bar{\alpha}_t$
+$\bar{\alpha}_t = \frac{f(t)}{f(0)}$ 
+- This falls to 0 less quickly that the value of $\bar{\alpha}_t$ derived from the original $\beta_t$ schedule whereby information was destroyed faster than necessary. 
+
+### Importance sampling of time steps
+As noted earlier the variational lower bound is much larger for earlier time steps compared to later ones. $L_\text{vlb}$ is sum of losses for $L_t$ for each timestep and therefore it can be estimated as $\Ef{t}{L_{t-1}}$
+
+This motivates the use of importance sampling of timesteps
+
+$$L_\text{vlb} = \E_{t \sim p_t}\left[\frac{L_t}{p_t}]
+
+
+## 42. Denosing Diffusion Implicit Models ([link](https://arxiv.org/abs/2010.02502))
+
+See [here](https://minibatchai.com/diffusion/generative-models/text2image/sampling/2022/07/14/Diffusion_Sampling.html)
