--- a/_posts/2021-01-12-101-Papers.md
+++ b/_posts/2021-01-12-101-Papers.md
@@ -4,6 +4,8 @@ title:  "101 papers"
 date:   2021-01-12 2:01:20 +0000
 categories: rc ai
 ---
+$\newcommand{\Ef}[2]{\mathbb{E}\_{#1}\left[#2\right]}$
+
 <script>
     window.onload = function(){
 
@@ -62,7 +64,7 @@ categories: rc ai
 
 </style>
 
-## Progress 
+<h2> Progress </h2>
 <div>
     <div id='progressOuter'>
         <div id="myProgress">
@@ -76,6 +78,11 @@ categories: rc ai
     </div>
 </div>
 <br>
+
+<h2> Contents </h2>
+
+* This will become a table of contents (this text will be scrapped).
+{:toc}
 
 ## 1. Hierarchical Multi-Scale Attention for Semantic Segmentation ([link](https://arxiv.org/abs/2005.10821v1))
 
@@ -98,7 +105,7 @@ Images are represented as a grid learning embeddings that is of a smaller size c
 ## 4. Reformer: The Efficient Transformer ([link](https://arxiv.org/abs/2001.04451))
 This is another approach to enable transformers to handle long sequences. The bottleneck is the attention map whose size is of order (N^2) where N is the sequence length. In this paper they note that the attention maps depend on the $\text{softmax}\left(\frac{QK^T}{\sqrt(d_k)}\right)$ they will dominated by elements which correspond to key and query vectors which are the closest to each other whilst other elements will be close to zero. Based on this insight they use a hashing mechanism which with high probability will place vectors that are close to each other (in the sense of having a large cosine similarity) in the same bins. The attention weights then only need to be found for pairs of keys and queries in the same bin with pairs in different bins giving rise to a weight of zero. If the the bin sizes are much smaller than $N$ then this approach will be a lot cheaper. One change they make to the regular model is to define the key vectors as the unit vectors in the direction of the query vectors so that $k_z = \frac{q_z}{\left \lVert q_z \right \rVert}$, which ensures that the hashes of $k_z$ and $q_z$ are the same and alleviates the problem of very uneven numbers of keys and queries in a bucket. I presumed that this means that 1/ they don't do a key transform of the input in self-attention layers prior to applying attention; 2/ they don't use the encoder outputs / memory to generate the key vectors when obtaining the attention weights to apply to the encoder outputs. I am not sure if this is the case but it looks like all the attention heads are self-attention with the difference that an element does not attend to itself unless there is no other element available e.g. if it is the first element in a sequence. They also experiment with adding reversible layers as in the reversible ResNet. The resulting model has a performance comparable to the regular transformer on a number of datasets and problems (enwiki8, WMT, imagenet64). 
 
-## 5. Adaptive Computation Time for Recurrent Neural Networks ([link] https://arxiv.org/abs/1603.08983))
+## 5. Adaptive Computation Time for Recurrent Neural Networks ([link](https://arxiv.org/abs/1603.08983))
 The key idea here is that a model should be able dynamically decide how much computation time to spend on a task based on its complexity. Consider an addition problem with a sequence of numbers of variable lengths. Adding a larger number will be more involved than adding a smaller one and the model should be able to adapt accordingly. This can also occur with non-sequential inputs where the prediction is more difficult to make for some inputs compared to others. The model works by modifying a normal RNN cell so that it kind of becomes an RNN itself. The difference is that the sequence involved is the number of computation steps rather than the data itself. We distinguish between data timesteps $t$ and number of compute steps $i$. Each iteration receives the entire input at timestep $t$ with an indicator when $i=0$ to inform the cell that the computation has just started for this data element. The cell generates and output and state at each compute step $i$ and the state is fed back for the next compute step. (When $i=0$ the state from the previous timestep, or when $t=0$ the initial state, is used). The cell makes an additonal prediction at every step $i$ which is used to decide if it should stop computing for element $t$. These predictions are also used to generate weights for aggregating the outputs and states from each compute step $i$. The model is trained using regular losses for the problem and an additional loss that penalises long computation times. The model outperforms baseline models which don't use adaptive computation (i.e. where the RNN cell behaves like a regular RNN cell with just one compute step) on a number of algorithmic tasks (parity, logic, addition, sorting).
 
 
@@ -227,7 +234,7 @@ It generates visually similar predictions for simulations of moving fabric, airf
 
 ## 17. GRAF: Generative Radiance Fields for 3D-Aware Image Synthesis([link](https://arxiv.org/abs/2007.02442))
 - Sample the follows
-    - Parameters of a translation and a rotation matrix from a distribution $\p_\epsilon$. They use a uniform distribution over the upper hemisphere with the camera facing towards the origin and in some cases vary the distance from the origin to the camera. 
+    - Parameters of a translation and a rotation matrix from a distribution $p_\epsilon$. They use a uniform distribution over the upper hemisphere with the camera facing towards the origin and in some cases vary the distance from the origin to the camera. 
     - A centre location and what they describe as "scale" but seems to be a stride from the image. The centre x-y coordinates are uniformly sampled from across the image domain and the scale is sampled from a continuous uniform distribution between $1$ and $S$. Values are sampled from this continuous space over the image using interpolation.
     - Latent vectors $\mathbf{z}_s$ and $\mathbf{z}_a$ for object shape and appearance, from a standard normal distribution.  
 - Based on the patch location, the transformation matrices and the camera intrinsics the 3D camera rays corresponding to any point in the patch can be determined. To predict the colour and volume density at a point $p_i$ in the patch do the following:
@@ -434,15 +441,15 @@ See [here](https://minibatchai.com/diffusion/generative-models/text2image/sampli
 Additional notes about improving log likelihood
 
 ### Learning the variance
-In the DDPM paper the covariance of the reverse process, $\Sigma_{\theta}\left(\xt, t\right)$ is modelled as a diagonal covariance $\sigma_t\II$ and it set as a hyperparameter.
+In the DDPM paper the covariance of the reverse process, $\Sigma_{\theta}\left(\mathbf{x}_t, t\right)$ is modelled as a diagonal covariance $\sigma_t\mathbf{I}$ and it set as a hyperparameter.
 
-Here they try two choices for $\sigma_t$, $\bt$ and $\tbt$. For large values of $t$ these two are roughly equal and for larger $T$ they converge sooner so it might seem that the choice of $\sigma_t$ is not that important.
+Here they try two choices for $\sigma_t$, $\beta_t$ and $\tilde{\beta}_t$. For large values of $t$ these two are roughly equal and for larger $T$ they converge sooner so it might seem that the choice of $\sigma_t$ is not that important.
 
 However it turns out that the first few time steps contribute the most to the variational lower bound so it might be a good idea to learn a better value for the variance.
 
-The method proposed in Improved Diffusion is to parameterise the variance as an interpolation between $\bt$ and $\tbt$ with learned parameter $v$
+The method proposed in Improved Diffusion is to parameterise the variance as an interpolation between $\beta_t$ and $\tilde{\beta}_t$ with learned parameter $v$
 
-$$\Sigma_{\theta}\left(\xt, t\right) = \exp\left(v\log\bt + (1 - v)\log \tbt\right)$$
+$$\Sigma_{\theta}\left(\mathbf{x}_t, t\right) = \exp\left(v\log\beta_t + (1 - v)\log \tilde{\beta}_t\right)$$
 
 The simplified loss from DDPM does not involve the variance so a new hybrid loss is defined as 
 
@@ -464,7 +471,7 @@ As noted earlier the variational lower bound is much larger for earlier time ste
 
 This motivates the use of importance sampling of timesteps
 
-$$L_\text{vlb} = \E_{t \sim p_t}\left[\frac{L_t}{p_t}]
+$$L_\text{vlb} = E_{t \sim p_t}\left[\frac{L_t}{p_t}\right]$$
 
 
 ## 42. Denosing Diffusion Implicit Models ([link](https://arxiv.org/abs/2010.02502))
